--- a/shop/templates/shop/basket_input.html
+++ b/shop/templates/shop/basket_input.html
@@ -68,16 +68,16 @@
                 {% if basket_delivery == True %}
                     <div class="delivery  col-md-6 col-xs-12">
                         <input type="radio" id="delivery1" name="choise" onclick="add_delivery.call(this)" value="Самовывоз">
-                        <label for="delivery1" ><p> Самовывоз</p></label><br/>
+                        <label for="delivery1" ><p>Самовывоз (ул. Бульвар победы 34, 2 этаж)</p></label><br/>
                         <input type="radio"  id="delivery2" name="choise" checked="true" onclick="add_delivery.call(this)" value="Доставка по адресу(250)">
-                        <label for="delivery2"><p> Доставка по адресу (250 р.)</p></label>
+                        <label for="delivery2"><p>Доставка по адресу (250 р.)</p></label>
                     </div>
                 {% else %}
                     <div class="delivery  col-md-6 col-xs-12">
                         <input type="radio" id="delivery1" name="choise" checked="true" onclick="add_delivery.call(this)" value="Самовывоз">
-                        <label for="delivery1" ><p> Самовывоз</p></label><br/>
+                        <label for="delivery1" ><p>Самовывоз (ул. Бульвар победы 34, 2 этаж)</p></label><br/>
                         <input type="radio"  id="delivery2" name="choise" onclick="add_delivery.call(this)" value="Доставка по адресу(250)">
-                        <label for="delivery2"><p> Доставка по адресу (250 р.)</p></label>
+                        <label for="delivery2"><p>Доставка по адресу (250 р.)</p></label>
                     </div>
                 {% endif %}
                 <div class="delivery_sum  col-md-6 col-xs-12">
